cambios en index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> Recetas de odin </h1>
+        <a href="/odinreceta/lasagna.html">Receta de lasagna</a><br>
+        <a href="/odinreceta/sloppy.html"> Soloppy Joe</a> <br>
 </body>
 </html>
