se agregaron modificaciones indes-lasagna-sloppy

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin recetas</title>
+    <title>Recetas</title>
 </head>
 <body>
-    <h1> Recetas de odin </h1>
-        <a href="/odinreceta/lasagna.html">Receta de lasagna</a><br>
+    <h1> Recetas fin del mundo </h1>
+<img src="/imagenes/latest-2656341244" alt="fallout" width="600" height="400"> <br><br>
+
+        <a href="/odinreceta/lasagna.html">Receta de lasagna</a><br> <br>
         <a href="/odinreceta/sloppy.html"> Soloppy Joe</a> <br>
 </body>
 </html>
