--- a/odinreceta/lasagna.html
+++ b/odinreceta/lasagna.html
@@ -48,5 +48,6 @@
     precalentado a 375 grados f. Cubrala con papel aluminio durane los primeros 25 miuntos <br>
  y luego dejela destapada otros 25 minutos mas, y 15 minutos mas a temperatura ambiente antes de servir.</p> 
 
+ <a href="/index.html">Volver</a>
 </body>
 </html>
