--- a/odinreceta/sloppy.html
+++ b/odinreceta/sloppy.html
@@ -40,5 +40,6 @@
  <li>Cocine a fuego lento durante unos 30 minutos. </li>
  <li>Sirva sobre panecillos para hamburguesa.</li>
 </ol>
+<a href="/index.html">Volver</a>
 </body>
 </html>
